# miniarm_ws

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/miniarm_test/: MoveArm.h  MoveArmRequest.h  MoveArmResponse.h  ServoControl.h  ServoControlRequest.h  ServoControlResponse.h
devel/lib/miniarm_test/: gripper_control_server  move_arm_client  move_arm_server
devel/lib/pkgconfig/: miniarm_test.pc
devel/lib/python3/dist-packages/miniarm_test/srv/: _MoveArm.py  _ServoControl.py  __init__.py
devel/share/common-lisp/ros/miniarm_test/srv/: MoveArm.lisp  ServoControl.lisp  _package.lisp  _package_MoveArm.lisp  _package_ServoControl.lisp  miniarm_test-srv.asd
devel/share/gennodejs/ros/miniarm_test/srv/: MoveArm.js  ServoControl.js  _index.js
devel/share/miniarm_test/cmake/: miniarm_test-msg-extras.cmake  miniarm_test-msg-paths.cmake  miniarm_testConfig.cmake
devel/share/roseus/ros/miniarm_test/: manifest.l
devel/share/roseus/ros/miniarm_test/srv/: MoveArm.l  ServoControl.l
install/: _setup_util.py  local_setup.sh
src/miniarm_test/: CMakeLists.txt
src/miniarm_test/Arm/: Arm.cpp  Arm.h  Arm_0923.cpp  CMakeLists.txt
src/miniarm_test/src/: gripper_control_server.cpp  move_arm_client.cpp  move_arm_server.cpp
src/miniarm_test/srv/: MoveArm.srv
